add github repo button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A brief description of the page" />
     <meta name="author" content="Your Name" />
-    <title>Pemrograman Web Dasar 2015-2016 TI-04</title>
+    <title>Pemrograman Web Dasar 2015-2016 | TI-04 2014</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -14,9 +14,13 @@
     <!-- <script src="script.js" defer></script> Link to your JavaScript file -->
   </head>
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div id="card-container" class="p-4 place-items-center">
+    <div id="card-container" class="text-center p-4">
       <!-- Cards will be injected here by JavaScript -->
-      <h5 class="my-5 text-xl">Pemrograman Web Dasar 2015-2016 | TI</h5>
+      <h5 class="my-5 text-xl">Pemrograman Web Dasar 2015-2016 | TI-04 2014</h5>
+      <a href="https://github.com/yanuarash/pemgrograman_web_dasar_TI04" target="_blank" class="inline-flex items-center m-4 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-700 transition-colors duration-300">
+        <i class="fa-brands fa-github mr-4"></i>
+        <span>Reponya Di sini Ya</span>
+    </a>
     </div>
 
     <script>
